src/main/mp/parser/MPParser.py
# Generated from main/mp/parser/MP.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MPParser ( Parser ):

    grammarFileName = "MP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "':='", "'+'", "'*'", "'<>'", 
                     "'<'", "'<='", "'-'", "'/'", "'='", "'>'", "'>='", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'('", "')'", "';'", "','", 
                     "'['", "']'", "':'", "'..'" ]

    symbolicNames = [ "<INVALID>", "BREAK", "CONTINUE", "FOR", "TO", "DOWNTO", 
                      "DO", "IF", "THEN", "ELSE", "RETURNS", "WHILE", "BEGIN", 
                      "END", "FUNCTION", "PROCEDURE", "VAR", "ARRAY", "OF", 
                      "REAL", "BOOLEAN", "INTEGER", "STRING", "NOT", "AND", 
                      "OR", "DIV", "MOD", "WITH", "ID", "ASSIGOP", "ADDOP", 
                      "MULOP", "NEQOP", "LTOP", "LTEOP", "SUBOP", "DIVOP", 
                      "EQOP", "GTOP", "GTEOP", "INTLIT", "REALIT", "BOOLIT", 
                      "UNCLOSE_STRING", "STRLIT", "ILLEGAL_ESCAPE", "LB", 
                      "RB", "SEMI", "COMMA", "LSB", "RSB", "COLON", "DDOT", 
                      "WS", "BLOCKCOM_B", "BLOCKCOM_P", "LINECOM", "ERROR_TOKEN" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_varDec = 2
    RULE_listOfType = 3
    RULE_types = 4
    RULE_arraycp = 5
    RULE_funcDec = 6
    RULE_paramList = 7
    RULE_compound_st = 8
    RULE_procDec = 9
    RULE_expression = 10
    RULE_exp1 = 11
    RULE_exp2 = 12
    RULE_exp3 = 13
    RULE_exp4 = 14
    RULE_exp5 = 15
    RULE_exp6 = 16
    RULE_exp7 = 17
    RULE_operand = 18
    RULE_indexEx = 19
    RULE_statement = 20
    RULE_assign_st = 21
    RULE_lhs = 22
    RULE_while_st = 23
    RULE_for_st = 24
    RULE_break_st = 25
    RULE_continue_st = 26
    RULE_return_st = 27
    RULE_with_st = 28
    RULE_call_st = 29
    RULE_listOfExp = 30
    RULE_if_st = 31

    ruleNames =  [ "program", "declaration", "varDec", "listOfType", "types", 
                   "arraycp", "funcDec", "paramList", "compound_st", "procDec", 
                   "expression", "exp1", "exp2", "exp3", "exp4", "exp5", 
                   "exp6", "exp7", "operand", "indexEx", "statement", "assign_st", 
                   "lhs", "while_st", "for_st", "break_st", "continue_st", 
                   "return_st", "with_st", "call_st", "listOfExp", "if_st" ]

    EOF = Token.EOF
    BREAK=1
    CONTINUE=2
    FOR=3
    TO=4
    DOWNTO=5
    DO=6
    IF=7
    THEN=8
    ELSE=9
    RETURNS=10
    WHILE=11
    BEGIN=12
    END=13
    FUNCTION=14
    PROCEDURE=15
    VAR=16
    ARRAY=17
    OF=18
    REAL=19
    BOOLEAN=20
    INTEGER=21
    STRING=22
    NOT=23
    AND=24
    OR=25
    DIV=26
    MOD=27
    WITH=28
    ID=29
    ASSIGOP=30
    ADDOP=31
    MULOP=32
    NEQOP=33
    LTOP=34
    LTEOP=35
    SUBOP=36
    DIVOP=37
    EQOP=38
    GTOP=39
    GTEOP=40
    INTLIT=41
    REALIT=42
    BOOLIT=43
    UNCLOSE_STRING=44
    STRLIT=45
    ILLEGAL_ESCAPE=46
    LB=47
    RB=48
    SEMI=49
    COMMA=50
    LSB=51
    RSB=52
    COLON=53
    DDOT=54
    WS=55
    BLOCKCOM_B=56
    BLOCKCOM_P=57
    LINECOM=58
    ERROR_TOKEN=59

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MPParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(MPParser.DeclarationContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 64
                self.declaration()
                self.state = 67 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.FUNCTION) | (1 << MPParser.PROCEDURE) | (1 << MPParser.VAR))) != 0)):
                    break

            self.state = 69
            self.match(MPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDec(self):
            return self.getTypedRuleContext(MPParser.VarDecContext,0)


        def funcDec(self):
            return self.getTypedRuleContext(MPParser.FuncDecContext,0)


        def procDec(self):
            return self.getTypedRuleContext(MPParser.ProcDecContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = MPParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 74
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 71
                self.varDec()
                pass
            elif token in [MPParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)
                self.state = 72
                self.funcDec()
                pass
            elif token in [MPParser.PROCEDURE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 73
                self.procDec()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarDecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MPParser.VAR, 0)

        def listOfType(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.ListOfTypeContext)
            else:
                return self.getTypedRuleContext(MPParser.ListOfTypeContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SEMI)
            else:
                return self.getToken(MPParser.SEMI, i)

        def getRuleIndex(self):
            return MPParser.RULE_varDec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDec" ):
                return visitor.visitVarDec(self)
            else:
                return visitor.visitChildren(self)




    def varDec(self):

        localctx = MPParser.VarDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(MPParser.VAR)
            self.state = 77
            self.listOfType()
            self.state = 82
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 78
                    self.match(MPParser.SEMI)
                    self.state = 79
                    self.listOfType() 
                self.state = 84
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 85
            self.match(MPParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListOfTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.ID)
            else:
                return self.getToken(MPParser.ID, i)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def types(self):
            return self.getTypedRuleContext(MPParser.TypesContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.COMMA)
            else:
                return self.getToken(MPParser.COMMA, i)

        def getRuleIndex(self):
            return MPParser.RULE_listOfType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListOfType" ):
                return visitor.visitListOfType(self)
            else:
                return visitor.visitChildren(self)




    def listOfType(self):

        localctx = MPParser.ListOfTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_listOfType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(MPParser.ID)
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.COMMA:
                self.state = 88
                self.match(MPParser.COMMA)
                self.state = 89
                self.match(MPParser.ID)
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 95
            self.match(MPParser.COLON)
            self.state = 96
            self.types()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MPParser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MPParser.INTEGER, 0)

        def REAL(self):
            return self.getToken(MPParser.REAL, 0)

        def STRING(self):
            return self.getToken(MPParser.STRING, 0)

        def arraycp(self):
            return self.getTypedRuleContext(MPParser.ArraycpContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_types

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypes" ):
                return visitor.visitTypes(self)
            else:
                return visitor.visitChildren(self)




    def types(self):

        localctx = MPParser.TypesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_types)
        try:
            self.state = 103
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.BOOLEAN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.match(MPParser.BOOLEAN)
                pass
            elif token in [MPParser.INTEGER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.match(MPParser.INTEGER)
                pass
            elif token in [MPParser.REAL]:
                self.enterOuterAlt(localctx, 3)
                self.state = 100
                self.match(MPParser.REAL)
                pass
            elif token in [MPParser.STRING]:
                self.enterOuterAlt(localctx, 4)
                self.state = 101
                self.match(MPParser.STRING)
                pass
            elif token in [MPParser.ARRAY]:
                self.enterOuterAlt(localctx, 5)
                self.state = 102
                self.arraycp()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArraycpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MPParser.ARRAY, 0)

        def LSB(self):
            return self.getToken(MPParser.LSB, 0)

        def INTLIT(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.INTLIT)
            else:
                return self.getToken(MPParser.INTLIT, i)

        def DDOT(self):
            return self.getToken(MPParser.DDOT, 0)

        def RSB(self):
            return self.getToken(MPParser.RSB, 0)

        def OF(self):
            return self.getToken(MPParser.OF, 0)

        def BOOLEAN(self):
            return self.getToken(MPParser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MPParser.INTEGER, 0)

        def REAL(self):
            return self.getToken(MPParser.REAL, 0)

        def STRING(self):
            return self.getToken(MPParser.STRING, 0)

        def SUBOP(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SUBOP)
            else:
                return self.getToken(MPParser.SUBOP, i)

        def getRuleIndex(self):
            return MPParser.RULE_arraycp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArraycp" ):
                return visitor.visitArraycp(self)
            else:
                return visitor.visitChildren(self)




    def arraycp(self):

        localctx = MPParser.ArraycpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_arraycp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(MPParser.ARRAY)
            self.state = 106
            self.match(MPParser.LSB)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.SUBOP:
                self.state = 107
                self.match(MPParser.SUBOP)


            self.state = 110
            self.match(MPParser.INTLIT)
            self.state = 111
            self.match(MPParser.DDOT)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.SUBOP:
                self.state = 112
                self.match(MPParser.SUBOP)


            self.state = 115
            self.match(MPParser.INTLIT)
            self.state = 116
            self.match(MPParser.RSB)
            self.state = 117
            self.match(MPParser.OF)
            self.state = 118
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.REAL) | (1 << MPParser.BOOLEAN) | (1 << MPParser.INTEGER) | (1 << MPParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncDecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(MPParser.FUNCTION, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def paramList(self):
            return self.getTypedRuleContext(MPParser.ParamListContext,0)


        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def types(self):
            return self.getTypedRuleContext(MPParser.TypesContext,0)


        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def compound_st(self):
            return self.getTypedRuleContext(MPParser.Compound_stContext,0)


        def varDec(self):
            return self.getTypedRuleContext(MPParser.VarDecContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_funcDec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDec" ):
                return visitor.visitFuncDec(self)
            else:
                return visitor.visitChildren(self)




    def funcDec(self):

        localctx = MPParser.FuncDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcDec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(MPParser.FUNCTION)
            self.state = 121
            self.match(MPParser.ID)
            self.state = 122
            self.match(MPParser.LB)
            self.state = 123
            self.paramList()
            self.state = 124
            self.match(MPParser.RB)
            self.state = 125
            self.match(MPParser.COLON)
            self.state = 126
            self.types()
            self.state = 127
            self.match(MPParser.SEMI)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 128
                self.varDec()


            self.state = 131
            self.compound_st()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def listOfType(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.ListOfTypeContext)
            else:
                return self.getTypedRuleContext(MPParser.ListOfTypeContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SEMI)
            else:
                return self.getToken(MPParser.SEMI, i)

        def getRuleIndex(self):
            return MPParser.RULE_paramList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = MPParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.state = 142
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.listOfType()
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MPParser.SEMI:
                    self.state = 134
                    self.match(MPParser.SEMI)
                    self.state = 135
                    self.listOfType()
                    self.state = 140
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [MPParser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Compound_stContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEGIN(self):
            return self.getToken(MPParser.BEGIN, 0)

        def END(self):
            return self.getToken(MPParser.END, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.StatementContext)
            else:
                return self.getTypedRuleContext(MPParser.StatementContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_compound_st

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompound_st" ):
                return visitor.visitCompound_st(self)
            else:
                return visitor.visitChildren(self)




    def compound_st(self):

        localctx = MPParser.Compound_stContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_compound_st)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(MPParser.BEGIN)
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.BREAK) | (1 << MPParser.CONTINUE) | (1 << MPParser.FOR) | (1 << MPParser.IF) | (1 << MPParser.RETURNS) | (1 << MPParser.WHILE) | (1 << MPParser.BEGIN) | (1 << MPParser.WITH) | (1 << MPParser.ID) | (1 << MPParser.INTLIT) | (1 << MPParser.REALIT) | (1 << MPParser.BOOLIT) | (1 << MPParser.STRLIT) | (1 << MPParser.LB))) != 0):
                self.state = 145
                self.statement()
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 151
            self.match(MPParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProcDecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDURE(self):
            return self.getToken(MPParser.PROCEDURE, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def paramList(self):
            return self.getTypedRuleContext(MPParser.ParamListContext,0)


        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def compound_st(self):
            return self.getTypedRuleContext(MPParser.Compound_stContext,0)


        def varDec(self):
            return self.getTypedRuleContext(MPParser.VarDecContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_procDec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcDec" ):
                return visitor.visitProcDec(self)
            else:
                return visitor.visitChildren(self)




    def procDec(self):

        localctx = MPParser.ProcDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_procDec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(MPParser.PROCEDURE)
            self.state = 154
            self.match(MPParser.ID)
            self.state = 155
            self.match(MPParser.LB)
            self.state = 156
            self.paramList()
            self.state = 157
            self.match(MPParser.RB)
            self.state = 158
            self.match(MPParser.SEMI)
            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 159
                self.varDec()


            self.state = 162
            self.compound_st()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp1(self):
            return self.getTypedRuleContext(MPParser.Exp1Context,0)


        def expression(self):
            return self.getTypedRuleContext(MPParser.ExpressionContext,0)


        def AND(self):
            return self.getToken(MPParser.AND, 0)

        def THEN(self):
            return self.getToken(MPParser.THEN, 0)

        def OR(self):
            return self.getToken(MPParser.OR, 0)

        def ELSE(self):
            return self.getToken(MPParser.ELSE, 0)

        def getRuleIndex(self):
            return MPParser.RULE_expression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MPParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.exp1()
            self._ctx.stop = self._input.LT(-1)
            self.state = 179
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 177
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
                    if la_ == 1:
                        localctx = MPParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 167
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
